<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-127dp"
        >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center_horizontal"
       >

       <androidx.cardview.widget.CardView
           android:layout_width="370dp"
           android:layout_height="50dp"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginBottom="40dp"
           android:text="Item"
           android:textSize="25sp"
           android:textStyle="bold">

           <TextView
               android:id="@+id/text_home"
               android:layout_width="350dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="5dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="10dp"
               android:layout_marginBottom="8dp"
               android:textAlignment="viewStart"
               android:textSize="30dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="1.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.025" />
       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:layout_width="370dp"
           android:layout_height="550dp"
           android:layout_marginBottom="40dp"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:text="Item"
           android:textSize="25sp"
           android:textStyle="bold">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/title_spending"
               android:textSize="20dp"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="10dp"/>
           <com.github.mikephil.charting.charts.PieChart
               android:id="@+id/spendingpiechart"
               android:layout_width="match_parent"
               android:layout_height="550dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="1.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.498"></com.github.mikephil.charting.charts.PieChart>
       </androidx.cardview.widget.CardView>
       <androidx.cardview.widget.CardView
           android:layout_width="370dp"
           android:layout_height="550dp"
           android:layout_marginBottom="40dp"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:text="Item"
           android:textSize="25sp"
           android:textStyle="bold">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/title_income"
               android:textSize="20dp"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="10dp"/>
           <com.github.mikephil.charting.charts.PieChart
               android:id="@+id/incomepiechart"
               android:layout_width="match_parent"
               android:layout_height="550dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="1.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.498"></com.github.mikephil.charting.charts.PieChart>
       </androidx.cardview.widget.CardView>
       <androidx.cardview.widget.CardView
           android:layout_width="370dp"
           android:layout_height="550dp"
           android:layout_marginBottom="40dp"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:text="Item"
           android:textSize="25sp"
           android:textStyle="bold">
           <com.github.mikephil.charting.charts.BarChart
               android:id="@+id/barchart"
               android:layout_width="match_parent"
               android:layout_height="550dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="1.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.498"/>
       </androidx.cardview.widget.CardView>
   </LinearLayout>


    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/title_add"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />
</androidx.constraintlayout.widget.ConstraintLayout>